# iot_connecting_things_exerices

./: .gitignore  .gitmodules
common/: CMakeLists.txt  IPStack.cpp  json.cpp  json.hpp  mqtt.cpp  mqtt.hpp
ex_1/: index.html  index.js  package-lock.json  package.json
ex_2/: index.html  index.js  message.json  package-lock.json  package.json  topics.json
ex_3/: CMakeLists.txt
ex_3/include/: hardware.hpp  lovepill.h
ex_3/src/: main.cpp
ex_4/: .gitignore  CMakeLists.txt
ex_4/include/: Countdown.hpp  IPStack.hpp  led.hpp  mqtt.hpp
ex_4/src/: Countdown.cpp  led.cpp  main.cpp
ex_4and5/: CMakeLists.txt  project_name.txt
ex_4and5/src/: main.cpp  utils.hpp
ex_5/src/: calc_consts.h  main.cpp  utils.cpp  utils.hpp
